--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bttele",
   "version": "1.0.0",
-  "description": "const BOT_TOKEN = '7762199917:AAGimHdXulwYiVspij8Jwr_hNO7dctRiITk';\r const YOUR_TELEGRAM_USER_ID = '5058242890'; // <- You can get this by talking to @userinfobot\r const CHANNEL_USERNAME = '@wallpaper_yamiro'; // e.g. @myChannelName",
+  "description": "A Telegram bot for managing and interacting with a Telegram channel.",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
