--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "crypto": "^1.0.1",
+    "dotenv": "^16.6.0",
     "express": "^4.18.2",
     "fs-extra": "^11.3.0",
     "p-queue": "^8.1.0",
